# fota-esp32-idf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
docs/: ARCHITECTURE.md  prompt.md
main/: CMakeLists.txt  led_indicator.c  led_indicator.h  main.c  ota_manager.c  ota_manager.h  recovery_mode.c  recovery_mode.h  wifi_manager.c  wifi_manager.h
tools/: prepare-firmware.py
video/: readme.md
